# dispocheck-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  build.rs  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  domain_report.yml
.github/workflows/: ci.yml  release.yml  update-domains.yml
benches/: lookup.rs
data/: SOURCE_COMMIT  SOURCE_URL
examples/: signup_validation.rs
scripts/: bump_patch_version.py  update_domains.sh
src/: lib.rs  runtime.rs
tests/: blocklist.rs  integration.rs
